force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/GFERP__Item_Unit_of_Measure__c.object-meta.xml
<CustomObject>
    <label>Item Unit of Measure</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Units of Measure</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>