force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFCON__Import_Item_UOM__c.field-meta.xml
<CustomField>
    <fullName>GFCON__Import_Item_UOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Import Item UOM Record associated with the Item Unit of Measure.</inlineHelpText>
    <label>Import Item UOM</label>
    <referenceTo>GFCON__Import_Item_UOM__c</referenceTo>
    <relationshipLabel>Item Units of Measure</relationshipLabel>
    <relationshipName>Item_Units_of_Measure</relationshipName>
    <type>Lookup</type>
</CustomField>