force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFERP__Conversion__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Conversion__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The number of units to convert to the item’s base UOM.</inlineHelpText>
    <label>Conversion</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>