force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFERP__Cubage__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Cubage__c</fullName>
    <formula>GFERP__Height__c * GFERP__Length__c * GFERP__Width__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculation of the Width x Length x Height.</inlineHelpText>
    <label>Cubage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>