force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFERP__Do_Not_Plan__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Do_Not_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this field will suppress this Item Unit of Measure from being displayed on the Item Availability Status page and Item Availability By Item By UOM By Month page.</inlineHelpText>
    <label>Do Not Plan</label>
    <type>Checkbox</type>
</CustomField>