force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFERP__Do_Not_Sell__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Do_Not_Sell__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this field will not allow this Item Unit of Measure to be used on a Sales Order.</inlineHelpText>
    <label>Do Not Sell</label>
    <type>Checkbox</type>
</CustomField>