force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFERP__GTIN__c.field-meta.xml
<CustomField>
    <fullName>GFERP__GTIN__c</fullName>
    <inlineHelpText>GTIN (Global Trade Item Number) is used to identify items and units of measure. The GTIN can be used in GoldFinch to assist data entry on Sales Orders and Transfer Orders.</inlineHelpText>
    <label>GTIN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>