force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFERP__Item__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Item__c</fullName>
    <inlineHelpText>The Item associated with this Item Unit of Measure.</inlineHelpText>
    <label>Item</label>
    <referenceTo>GFERP__Item__c</referenceTo>
    <relationshipLabel>Item Units of Measure</relationshipLabel>
    <relationshipName>Item_Unit_of_Measures1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>