force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFERP__Max_Qty__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Max_Qty__c</fullName>
    <inlineHelpText>Enter the maximum inventory quantity for this Item Unit of Measure.  This is currently for information only and not used in Supply Planning.</inlineHelpText>
    <label>Max Qty.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>