force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFERP__Pallet__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Pallet__c</fullName>
    <inlineHelpText>The number of the pallet that the Items were received on.</inlineHelpText>
    <label>Pallet</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>