force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFERP__Qty_Allocated__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Qty_Allocated__c</fullName>
    <inlineHelpText>The calculated total quantity of this Item Unit of Measure that is currently allocated on sales orders.</inlineHelpText>
    <label>SO Qty. Allocated</label>
    <summarizedField>GFERP__Item_Allocation__c.GFERP__Quantity__c</summarizedField>
    <summaryForeignKey>GFERP__Item_Allocation__c.GFERP__Unit_of_Measure__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>