force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFERP__Qty_Available__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Qty_Available__c</fullName>
    <formula>GFERP__Qty_on_Hand__c - GFERP__Qty_Allocated__c -  GFERP__TO_Qty_Allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Qty. on Hand – SO Qty. Allocated - TO Qty. Allocated</inlineHelpText>
    <label>Qty. Available</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>