force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFERP__Qty_on_Hand__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Qty_on_Hand__c</fullName>
    <inlineHelpText>The calculated total quantity on hand for this Item Unit of Measure.</inlineHelpText>
    <label>Qty. on Hand</label>
    <summarizedField>GFERP__Warehouse_Entry__c.GFERP__Quantity__c</summarizedField>
    <summaryForeignKey>GFERP__Warehouse_Entry__c.GFERP__Unit_of_Measure__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>