force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFERP__Type__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Type__c</fullName>
    <formula>Text( GFERP__Unit_of_Measure__r.GFERP__Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The type that is associated with the Unit of Measure.</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>