force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFERP__Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Unit_of_Measure__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Unit of Measure that is associated with this Item Unit of Measure.</inlineHelpText>
    <label>Unit of Measure</label>
    <referenceTo>GFERP__Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Item Unit of Measures</relationshipLabel>
    <relationshipName>Item_Unit_of_Measures</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>