force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/GFERP__Weight__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Weight__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter the weight of this Item Unit of Measure.</inlineHelpText>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>