force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/Standard_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Standard_Base_Price__c</fullName>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>