force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/Uploaded_Available_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Available_Inventory__c</fullName>
    <label>Uploaded Available Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>