force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/Uploaded_Online_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Online_To_Date__c</fullName>
    <label>Uploaded Online To Date</label>
    <type>Date</type>
</CustomField>