force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/Uploaded_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Sales_Price__c</fullName>
    <label>Uploaded Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>