force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/Uploaded_to_CC_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_to_CC_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uploaded to CC Inventory</label>
    <type>Checkbox</type>
</CustomField>