force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/fields/Uploaded_to_CC_Inventory_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_to_CC_Inventory_Date_Time__c</fullName>
    <label>Uploaded to CC Inventory Date/Time</label>
    <type>DateTime</type>
</CustomField>