force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/listViews/GFERP__All.listView-meta.xml
<ListView>
    <fullName>GFERP__All</fullName>
    <columns>GFERP__Item__c</columns>
    <columns>GFERP__Unit_of_Measure__c</columns>
    <columns>GFERP__Conversion__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Uploaded_Available_Inventory__c</columns>
    <columns>Uploaded_Sales_Price__c</columns>
    <columns>GFERP__Do_Not_Sell__c</columns>
    <columns>Standard_Base_Price__c</columns>
    <columns>Uploaded_to_CC_Inventory__c</columns>
    <columns>Uploaded_to_CC_Inventory_Date_Time__c</columns>
    <columns>Uploaded_to_CC_Item__c</columns>
    <columns>Uploaded_to_CC_Item_Date_Time__c</columns>
    <columns>Uploaded_to_CC_Sales_Price__c</columns>
    <columns>Uploaded_to_CC_Sales_Price_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GFERP__Item__c</field>
        <operation>notContain</operation>
        <value>Demo</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>