force-app/main/default/objects/GFERP__Item_Unit_of_Measure__c/listViews/Item.listView-meta.xml
<ListView>
    <fullName>Item</fullName>
    <columns>GFERP__Item__c</columns>
    <columns>NAME</columns>
    <columns>GFERP__Unit_of_Measure__c</columns>
    <columns>GFERP__Conversion__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Uploaded_Available_Inventory__c</columns>
    <columns>Uploaded_Sales_Price__c</columns>
    <columns>Standard_Base_Price__c</columns>
    <columns>Uploaded_to_CC_Inventory__c</columns>
    <columns>Uploaded_to_CC_Inventory_Date_Time__c</columns>
    <columns>Uploaded_to_CC_Item__c</columns>
    <columns>Uploaded_to_CC_Item_Date_Time__c</columns>
    <columns>Uploaded_to_CC_Sales_Price__c</columns>
    <columns>Uploaded_to_CC_Sales_Price_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>Item</value>
    </filters>
    <filters>
        <field>Uploaded_to_CC_Item__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Item</label>
    <language>en_US</language>
</ListView>